--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
 	"require": {
 		"php": ">=5.3.0",
-		"silex/silex": "1.0.*@dev"
+		"silex/silex": "1.0.*@dev",
+		"twig/twig": "1.12.*@dev"
 	}
 }
