--- a/.htaccess
+++ b/.htaccess
@@ -5,3 +5,6 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
 </IfModule>
+
+php_flag display_errors 1
+php_value error_reporting 2047
